--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -104,7 +104,22 @@
             href="./listar-alunos/">
                 Alunos
             </a>
-        </button>
+    </div>
+    <div>
+        <button style="margin-top: 30px;
+                        width: 120px;
+                        height: 30px;
+                        background-color: green;
+                        color: white;
+                        border-radius: 10px;
+                        padding: 5px;
+                        border: 2px solid white;">
+            <a style="color: white;
+                      background-color: green;
+                      text-decoration: none;"
+            href="./listar-presencas/">
+                Presenças
+            </a>
     </div>
     {% endif %}
 
